se agrega el swagger del handler usuario
